--- a/file-3174.html
+++ b/file-3174.html
@@ -5,3 +5,10 @@ asljdflsadjfl;asd <fieldset>sdaf as
 
 
 // DEV-3174
+
+asdjflkj hsadlfsda 
+
+//new feature
+
+
+new feature lajflfads jl;fjasdl;kf jasl;dfj aslkdjf la;skdjf
